<resources>

    <string name="app_name">MediRx</string>
    <string name="entry">Enter</string>
    <string name="all_text">All Products</string>
    <string name="review_text">Review Product</string>
    <string name="submit_btn">Submit</string>
    <string name="all_views">All Reviews</string>
    <string name="comment_hint">Add a Comment</string>
    <string name="name_hint">Add Your Name</string>
    <string name="item_name">Name</string>
    <string name="item_comment">Comment</string>
    <string name="cart_button_add">Add To Cart</string>
    

    <string name="heading_add_card">Add Card</string>
    <string name="input_name_on_card">Name on Card</string>
    <string name="input_card_no">Card No.</string>
    <string name="input_exp_Date">Exp. Date</string>
    <string name="input_Cvv">CVV</string>
    <string name="input_Billing_address">Billing Address</string>
    <string name="btn_confirm">Confirm</string>
    <string name="viewCardIDtxt" />
    <string name="cardNickname">Nickname</string>

    <string name="heading_wallet">Wallet</string>
    <string name="txt_cardNo1">.... .... .... 5898</string>
    <string name="txt_visa">Visa</string>
    <string name="txt_cardNo2">.... .... .... 4696</string>
    <string name="txt_mastercard">Mastercard</string>
    <string name="btn_add_payment_method">Add Payment Method</string>
    <string name="output_nickname_1"></string>
    <string name="output_nickname_2"></string>
    <string name="output_card_1"></string>
    <string name="output_card_2"></string>

    <string name="heading_cardType"></string>
    <string name="txt_cardNo"></string>
    <string name="txt_expiry_date">Expiry Date</string>
    <string name="txt_expDate"></string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove_payment_method">Remove Payment Method</string>
    <string name="output_nickname_view"></string>
    <string name="output_cardno_view"></string>
    <string name="output_expiry_view"></string>

    <string name="heading_edit_card">Edit Card</string>
    <string name="heading_cardNickName">Nickname</string>
    <string name="input_NameOnCard"></string>
    <string name="input_edit_card_no"></string>
    <string name="input_exp_date"></string>
    <string name="input_cvv"></string>
    <string name="input_billing_address"></string>
    <string name="btn_edit_card_save">Save</string>

    <string name="heading_edit_profile">Edit Profile</string>
    <string name="input_edit_profile_full_name">Full Name</string>
    <string name="input_edit_profile_phone_number">Phone Number</string>
    <string name="input_edit_profile_email">Email</string>
    <string name="input_edit_profile_password">Password</string>
    <string name="input_edit_profile_save">Save</string>
    <string name="input_edit_profile_wallet">Wallet</string>

    <string name="totalOrders">0</string>
    <string name="totalSales">0</string>
    <string name="totalOrdersForDay">0</string>
    <string name="totalSalesForDay">0</string>
    <string name="totalProdctOrdersText">Total Product Orders</string>
    <string name="TotalSalesText">Total Sales</string>
    <string name="manageProductsBtn">Manage Products</string>
    <string name="pharmacyNameTxt">pharmacyUser</string>
    <string name="manageProductstxt">Manage Products</string>
    <string name="pharmacyDashboardtxt">Dashboard</string>
    <string name="addNewBtntxt">ADD New Product</string>
    <string name="addNewProducttxt">ADD New Product</string>
    <string name="productNameIn"></string>
    <string name="productPriceIn"></string>
    <string name="productQuantityIn"></string>
    <string name="editProducttxt">Edit Product</string>
    <string name="addProductSavebtn">Save</string>
    <string name="editProductSavebtn">Save</string>
    <string name="addProducthint">Product Name</string>
    <string name="addProductPricehint">Price</string>
    <string name="addProductQuantityhint">Quantity</string>
    <string name="viewProductIDtxt" />
    <string name="inventoryTextViewNum">0</string>
    <string name="currentInventorytxt">"Total Inventory "</string>
    <string name="editbtntxt">Edit</string>
    <string name="deletebtntxt">Delete</string>
    <string name="productBuyingPriceIn" />
    <string name="addProductBuyingPricehint">Bying Price</string>
    <string name="addProductDescriptionhint">Description</string>
    <string name="inventoryNetTextViewtxt">Inventory Net Rs</string>
    <string name="inventoryNetNumberViewtxt">0</string>
    <string name="expectedSalesTxttxt">Expected Sales</string>
    <string name="expectedSalesTextNumtxt">0</string>
    <string name="expectedProfitTexttxt">Expected Net Profit Rs</string>
    <string name="expectedNetProfitTextNumber">0</string>
    <string name="edditproductIDViewtxt">PR</string>
    <string name="edditProductNtxt"></string>
    <string name="edditProducthint">Product Name</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="txt_forgot_pw">FORGOT PASSWORD</string>
    <string name="inputBox_email">Email</string>
    <string name="inputBox_password">Password</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inputBox_full_name">Full Name</string>
    <string name="inputBox_phone_no">Phone Number</string>
    <string name="radio_btn_customer">Customer</string>
    <string name="radio_btn_pharmacy">Pharmacy</string>
    <string name="txt_acc_type">Choose Account Type :</string>
    <string name="txt_add_category">Add Category</string>
    <string name="inputBox_category_name">Category Name</string>
    <string name="inputBox_category_id">Category ID</string>
    <string name="inputBox_category_description">Description</string>
    <string name="btn_done">DONE</string>
    <string name="txt_edit_category">Edit Category</string>
    <string name="txt_manage_categories">Manage Categories</string>
    <string name="txt_reset_password">RESET PASSWORD</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="txt_reset_pw_info">Enter your email below to receive instructions to reset password.</string>
    <string name="btn_edt_category">Edit</string>
    <string name="btn_dlt_category">Delete</string>
    <string name="txt_category_no_txtView">Category [No.]</string>
    <string name="txt_category_desc_txtView">[Category Description]</string>
    <string name="manageCategoriesBtntxt">"Manage Categories "</string>
    <string name="walletbtntxt">Wallet</string>>
</resources>
