<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pharmacyMain">

    <TextView
        android:id="@+id/pharmacyNameText"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:text="@string/pharmacyNameTxt"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pharmacyPictureView"
        android:layout_width="103dp"
        android:layout_height="105dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pharmacyNameText"
        app:layout_constraintTop_toTopOf="@+id/pharmacyNameText"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/manageProductsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_settings_applications_24"
        android:text="@string/manageProductsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:text="@string/pharmacyDashboardtxt"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inventoryCardview"
        android:layout_width="399dp"
        android:layout_height="97dp"
        android:layout_marginBottom="386dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyPictureView"
        app:layout_constraintVertical_bias="0.169">

        <TextView
            android:id="@+id/inventoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="7dp"
            android:text="@string/currentInventorytxt"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inventoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/inventoryTextViewNum"
            android:textColor="@color/medium_blue"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inventoryNetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="7dp"
            android:text="@string/inventoryNetTextViewtxt"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/inventoryNetNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="30dp"
            android:text="@string/inventoryNetNumberViewtxt"
            android:textColor="@color/medium_blue"
            android:textSize="34sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="399dp"

        android:layout_height="96dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryCardview">

        <TextView
            android:id="@+id/expectedSalesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="7dp"
            android:text="@string/expectedSalesTxttxt"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/expectedSalesTextNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/expectedSalesTextNumtxt"

            android:textColor="@color/medium_blue"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/expectedProfitText"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="7dp"
            android:text="@string/expectedProfitTexttxt"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/expectedNetProfitTextNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="30dp"
            android:text="@string/expectedNetProfitTextNumber"
            android:textColor="@color/medium_blue"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/manageCategoriesBtn"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:text="@string/manageCategoriesBtntxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageProductsBTN"
        app:layout_constraintVertical_bias="0.29" />


</androidx.constraintlayout.widget.ConstraintLayout>