<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="180dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="@string/heading_wallet"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output_card_1"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="177dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output_card_2"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_nickname_1"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="222dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_nickname_2"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="332dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="385dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/btn_add_payment_method"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>