<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton4"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output_nickname_view"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="79dp" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output_cardno_view"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_expiry_date"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output_expiry_view"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="257dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="44dp"
        android:backgroundTint="#000064AF"
        android:text="Button"
        android:textColor="@color/dark_blue"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconTint="@color/black"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="348dp"
        tools:text="@string/btn_edit" />

    <Button
        android:id="@+id/button3"
        android:layout_width="385dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/btn_remove_payment_method"
        app:icon="@android:drawable/ic_delete"
        app:iconTint="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>